[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/interactive/interactive/energybox.png" type="Texture" id=1]
[ext_resource path="res://scenes/interact/EnergyBox.gd" type="Script" id=2]
[ext_resource path="res://scenes/interact/FSEnergyBox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.5, 64.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 47.5 )

[node name="EnergyBox" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OpenEnergyBox" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 72.5, 85.5 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="Energybox" type="Sprite" parent="Area2D/StaticBody2D"]
position = Vector2( 70, 110 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 71, 82.5 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
